--- a/app/globals.css
+++ b/app/globals.css
@@ -3,25 +3,91 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+	--light-blue-200: #ebf4feff;
+	--light-blue-300: #dbebffff;
+	--light-blue-500: #086df7ff;
+	--light-gray-100: #fbfcfeff;
+	--light-gray-200: #f2f5fdff;
+	--light-gray-600: #8d93a0ff;
+	--light-gray-700: #646e87ff;
+	--light-gray-800: #40495eff;
+	--light-gray-900: #2e374bff;
+	--light-green-100: #eefbf2ff;
+	--light-green-300: #d4f7e4ff;
+	--light-green-500: #3a825cff;
+	--light-green-700: #5b866fff;
+	--light-green-800: #435b4eff;
+	--light-green-900: #2e4b3cff;
+	--light-orange-200: #fef3ebff;
+	--light-orange-300: #fee7d7ff;
+	--light-orange-500: #c45f17ff;
+	--light-purple-200: #f2f0fcff;
+	--light-purple-300: #e6e1feff;
+	--light-purple-500: #765ee8ff;
+	--light-purple-700: #7f78a1ff;
+	--light-purple-800: #59527aff;
+	--light-purple-900: #474068ff;
+	--light-red-200: #fbf1f3ff;
+	--light-red-300: #fee1e8ff;
+	--light-red-500: #cf3f62ff;
+	--light-red-700: #98717bff;
+	--light-red-800: #714b55ff;
+	--light-red-900: #5f3a43ff;
+	--light-yelllow-200: #fcf3edff;
+	--light-yelllow-300: #fef3dcff;
+	--light-yelllow-500: #9b6c08ff;
+	--light-yelllow-700: #887c63ff;
+	--light-yelllow-800: #5b5343ff;
+	--light-yelllow-900: #4b422eff;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+	:root {
+		--dark-blue-200: #252c3cff;
+		--dark-blue-300: #384c7aff;
+		--dark-blue-500: #388cffff;
+		--dark-gray-100: #1d1f23ff;
+		--dark-gray-200: #21242cff;
+		--dark-gray-600: #666970ff;
+		--dark-gray-700: #81868dff;
+		--dark-gray-800: #c0c1c4ff;
+		--dark-gray-900: #eaeaebff;
+		--dark-green-100: #25322bff;
+		--dark-green-300: #28573eff;
+		--dark-green-500: #18e779ff;
+		--dark-green-700: #819c8eff;
+		--dark-green-800: #bcdccbff;
+		--dark-green-900: #f6fefaff;
+		--dark-orange-200: #322a25ff;
+		--dark-orange-300: #573c28ff;
+		--dark-orange-500: #f99553ff;
+		--dark-purple-200: #2a2734ff;
+		--dark-purple-300: #413777ff;
+		--dark-purple-500: #8e76feff;
+		--dark-purple-700: #928ea4ff;
+		--dark-purple-800: #cecae2ff;
+		--dark-purple-900: #f7f6feff;
+		--dark-red-200: #322528ff;
+		--dark-red-300: #6d3140ff;
+		--dark-red-500: #f35e82ff;
+		--dark-red-700: #9e8a8fff;
+		--dark-red-800: #dcc6ccff;
+		--dark-red-900: #fef1f4ff;
+		--dark-yelllow-200: #322e25ff;
+		--dark-yelllow-300: #574828ff;
+		--dark-yelllow-500: #eec468ff;
+		--dark-yelllow-700: #9e978aff;
+		--dark-yelllow-800: #dbd3c2ff;
+		--dark-yelllow-900: #fefbf6ff;
+	}
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	color: rgb(var(--foreground-rgb));
+	background: linear-gradient(
+			to bottom,
+			transparent,
+			rgb(var(--background-end-rgb))
+		)
+		rgb(var(--background-start-rgb));
 }
