testing colors and borders, fix some color issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,7 @@
 		--red-200: 346deg, 15%, 17%;
 		--red-300: 345deg, 38%, 31%;
 		--red-500: 346deg, 86%, 66%;
-		--red-700: 345, 9%, 58%;
+		--red-700: 345deg, 9%, 58%;
 		--red-800: 344deg, 24%, 82%;
 		--red-900: 346deg, 87%, 97%;
 
