--- a/public/styles.css
+++ b/public/styles.css
@@ -450,7 +450,7 @@ video {
   --red-200: 346deg, 15%, 17%;
   --red-300: 345deg, 38%, 31%;
   --red-500: 346deg, 86%, 66%;
-  --red-700: 345, 9%, 58%;
+  --red-700: 345deg, 9%, 58%;
   --red-800: 344deg, 24%, 82%;
   --red-900: 346deg, 87%, 97%;
   --yellow-200: 42deg, 15%, 17%;
@@ -602,16 +602,128 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.m-16 {
+  margin: 4rem;
+}
+
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
+.border-green-900 {
+  --tw-border-opacity: 1;
+  border-color: hsl(var(--green-900), var(--tw-border-opacity));
+}
+
+.border-green-900\/\[\.50\] {
+  border-color: hsl(var(--green-900), .50);
+}
+
+.border-green-900\/\[\.08\] {
+  border-color: hsl(var(--green-900), .08);
+}
+
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: hsl(var(--gray-100), var(--tw-bg-opacity));
 }
 
-.p-5 {
-  padding: 1.25rem;
+.bg-green-200 {
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--green-200), var(--tw-bg-opacity));
 }
 
-.text-gray-700 {
+.bg-green-900 {
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--green-900), var(--tw-bg-opacity));
+}
+
+.p-16 {
+  padding: 4rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.text-green-700 {
   --tw-text-opacity: 1;
-  color: hsl(var(--gray-700), var(--tw-text-opacity));
+  color: hsl(var(--green-700), var(--tw-text-opacity));
+}
+
+.text-green-900 {
+  --tw-text-opacity: 1;
+  color: hsl(var(--green-900), var(--tw-text-opacity));
+}
+
+.outline-4 {
+  outline-width: 4px;
+}
+
+.outline-2 {
+  outline-width: 2px;
+}
+
+.outline-offset-2 {
+  outline-offset: 2px;
+}
+
+.outline-offset-0 {
+  outline-offset: 0px;
+}
+
+.outline-gray-200\/\[\.8\] {
+  outline-color: hsl(var(--gray-200), .8);
+}
+
+.outline-blue-200\/\[\.8\] {
+  outline-color: hsl(var(--blue-200), .8);
+}
+
+.outline-red-200\/\[\.8\] {
+  outline-color: hsl(var(--red-200), .8);
+}
+
+.outline-red-900\/\[\.8\] {
+  outline-color: hsl(var(--red-900), .8);
+}
+
+.outline-green-900\/\[\.8\] {
+  outline-color: hsl(var(--green-900), .8);
+}
+
+.outline-gray-900\/\[\.8\] {
+  outline-color: hsl(var(--gray-900), .8);
+}
+
+.outline-gray-900 {
+  outline-color: hsl(var(--gray-900), 1);
+}
+
+.outline-green-900 {
+  outline-color: hsl(var(--green-900), 1);
+}
+
+.outline-green-200 {
+  outline-color: hsl(var(--green-200), 1);
+}
+
+.ring-2 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.ring-green-900 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: hsl(var(--green-900), var(--tw-ring-opacity));
+}
+
+.ring-red-900 {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: hsl(var(--red-900), var(--tw-ring-opacity));
 }
