--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,40 @@
 @tailwind utilities;
 
 @layer base {
-	:root {
+	@font-face {
+		font-family: 'ui';
+		src: url('../public/fonts/Nunito-ExtraBold.woff2') format('woff2'),
+			url('../public/fonts/Nunito-ExtraBold.woff') format('woff');
+		font-weight: 800;
+		font-display: swap;
+		font-style: normal;
+	}
+	@font-face {
+		font-family: 'ui';
+		src: url('../public/fonts/Nunito-Italic.woff2') format('woff2'),
+			url('../public/fonts/Nunito-Italic.woff') format('woff');
+		font-weight: 400;
+		font-display: swap;
+		font-style: italic;
+	}
+	@font-face {
+		font-family: 'ui';
+		src: url('../public/fonts/Nunito-Regular.woff2') format('woff2'),
+			url('../public/fonts/Nunito-Regular.woff') format('woff');
+		font-weight: 400;
+		font-display: swap;
+		font-style: normal;
+	}
+	@font-face {
+		font-family: 'heading';
+		src: url('../public/fonts/geomanist-medium-webfont.woff2')
+				format('woff2'),
+			url('../public/fonts/geomanist-medium-webfont.woff') format('woff');
+		font-weight: 500;
+		font-display: swap;
+		font-style: normal;
+	}
+	:root[data-theme='dark'] {
 		--gray-100: 220deg, 9%, 13%;
 		--gray-200: 224deg, 14%, 15%;
 		--gray-600: 222deg, 8%, 54%;
@@ -48,50 +81,94 @@
 		--yellow-900: 38deg, 80%, 98%;
 	}
 
-	@media (prefers-color-scheme: light) {
-		:root {
-			--gray-100: 220deg, 60%, 99%;
-			--gray-200: 220deg, 73%, 97%;
-			--gray-600: 221deg, 9%, 59%;
-			--gray-700: 223deg, 15% 46%;
-			--gray-800: 222deg, 19%, 31%;
-			--gray-900: 221deg, 24%, 24%;
+	:root[data-theme='light'] {
+		--gray-100: 220deg, 60%, 99%;
+		--gray-200: 220deg, 73%, 97%;
+		--gray-600: 221deg, 9%, 59%;
+		--gray-700: 223deg, 15%, 46%;
+		--gray-800: 222deg, 19%, 31%;
+		--gray-900: 221deg, 24%, 24%;
 
-			--blue-200: 212deg, 90%, 96%;
-			--blue-300: 213deg, 100%, 93%;
-			--blue-500: 215deg, 94%, 50%;
+		--blue-200: 212deg, 90%, 96%;
+		--blue-300: 213deg, 100%, 93%;
+		--blue-500: 215deg, 94%, 50%;
 
-			--orange-200: 25deg, 90%, 96%;
-			--orange-300: 25deg, 95%, 92%;
-			--orange-500: 25deg, 79%, 43%;
+		--orange-200: 25deg, 90%, 96%;
+		--orange-300: 25deg, 95%, 92%;
+		--orange-500: 25deg, 79%, 43%;
 
-			--green-200: 38deg, 62%, 96%;
-			--green-300: 147deg, 69%, 90%;
-			--green-500: 148deg, 38%, 37%;
-			--green-700: 148deg, 19%, 44%;
-			--green-800: 148deg, 15%, 31%;
-			--green-900: 149deg, 24%, 24%;
+		--green-200: 138deg, 62%, 96%;
+		--green-300: 147deg, 69%, 90%;
+		--green-500: 148deg, 38%, 37%;
+		--green-700: 148deg, 19%, 44%;
+		--green-800: 148deg, 15%, 31%;
+		--green-900: 149deg, 24%, 24%;
 
-			--purple-200: 250deg, 67%, 96%;
-			--purple-300: 250deg, 94%, 94%;
-			--purple-500: 250deg, 75%, 64%;
-			--purple-700: 250deg, 18%, 55%;
-			--purple-800: 251deg, 20%, 40%;
-			--purple-900: 251deg, 24%, 33%;
+		--purple-200: 250deg, 67%, 96%;
+		--purple-300: 250deg, 94%, 94%;
+		--purple-500: 250deg, 75%, 64%;
+		--purple-700: 250deg, 18%, 55%;
+		--purple-800: 251deg, 20%, 40%;
+		--purple-900: 251deg, 24%, 33%;
 
-			--red-200: 348deg, 56%, 96%;
-			--red-300: 346deg, 94%, 94%;
-			--red-500: 345deg, 60%, 53%;
-			--red-700: 345deg, 16%, 52%;
-			--red-800: 344deg, 20%, 37%;
-			--red-900: 345deg, 24%, 30%;
+		--red-200: 348deg, 56%, 96%;
+		--red-300: 346deg, 94%, 94%;
+		--red-500: 345deg, 60%, 53%;
+		--red-700: 345deg, 16%, 52%;
+		--red-800: 344deg, 20%, 37%;
+		--red-900: 345deg, 24%, 30%;
 
-			--ywllow-200: 24deg, 71%, 96%;
-			--ywllow-300: 41deg, 94%, 93%;
-			--ywllow-500: 41deg, 90%, 32%;
-			--ywllow-700: 41deg, 16%, 46%;
-			--ywllow-800: 40deg, 15%, 31%;
-			--ywllow-900: 41deg, 24%, 24%;
-		}
+		--ywllow-200: 24deg, 71%, 96%;
+		--ywllow-300: 41deg, 94%, 93%;
+		--ywllow-500: 41deg, 90%, 32%;
+		--ywllow-700: 41deg, 16%, 46%;
+		--ywllow-800: 40deg, 15%, 31%;
+		--ywllow-900: 41deg, 24%, 24%;
+	}
+}
+
+@layer base {
+	p,
+	b,
+	i {
+		@apply font-ui;
+	}
+	.p-base {
+		@apply text-bodyMobileRegularBase tablet:text-bodyWebRegularBase;
+	}
+	.p-large {
+		@apply text-bodyMobileRegularLarge  tablet:text-bodyWebRegularLarge;
+	}
+
+	.b-base {
+		@apply text-bodyMobileBoldBase tablet:text-bodyWebBoldBase;
+	}
+	.b-large {
+		@apply text-bodyMobileBoldLarge tablet:text-bodyWebBoldLarge;
+	}
+	.i-base {
+		@apply text-bodyMobileItalicBase tablet:text-bodyWebItalicBase;
+	}
+	.i-large {
+		@apply text-bodyMobileItalicLarge tablet:text-bodyWebItalicLarge;
+	}
+	.heading-bigger {
+		@apply font-heading text-headingMobileBigger tablet:text-headingWebBigger;
+	}
+	.heading-big {
+		@apply font-heading text-headingMobileBig tablet:text-headingWebBig;
+	}
+	.heading-base {
+		@apply font-heading text-headingMobileBase tablet:text-headingWebBase;
+	}
+	.heading-small {
+		@apply font-heading text-headingMobileBase tablet:text-headingWebBase uppercase;
+	}
+
+	.heading-link {
+		@apply heading-big hover:underline hover:underline-offset-2 cursor-pointer;
+	}
+	.p-link {
+		@apply p-base underline underline-offset-2 cursor-pointer;
 	}
 }
