--- a/public/styles.css
+++ b/public/styles.css
@@ -556,7 +556,9 @@ video {
 p,
 	b,
 	i,
-	a {
+	a,
+	ul,
+	li {
   font-family: ui, sans-serif;
   --tw-text-opacity: 1;
   color: hsl(var(--gray-700), var(--tw-text-opacity));
@@ -571,6 +573,20 @@ h1,
   font-family: heading, sans-serif;
   --tw-text-opacity: 1;
   color: hsl(var(--gray-900), var(--tw-text-opacity));
+}
+
+.p-base {
+  font-size: 0.875rem;
+  line-height: 24px;
+  font-weight: 400;
+}
+
+@media (min-width: 960px) {
+  .p-base {
+    font-size: 1rem;
+    line-height: 27px;
+    font-weight: 400;
+  }
 }
 
 .p-large {
@@ -603,30 +619,50 @@ h1,
   }
 }
 
-.link-button-base {
-  font-size: 0.875rem;
-  line-height: 24px;
-  font-weight: 800;
-  --tw-text-opacity: 1;
-  color: hsl(var(--gray-900), var(--tw-text-opacity));
+.heading-big {
+  margin-bottom: 1rem;
+  font-size: 1.188rem;
+  line-height: 21px;
+  font-weight: 500;
 }
 
 @media (min-width: 960px) {
-  .link-button-base {
-    font-size: 1rem;
-    line-height: 27px;
-    font-weight: 800;
+  .heading-big {
+    font-size: 1.75rem;
+    line-height: 31px;
+    font-weight: 500;
   }
 }
 
-.link-button-base {
-  cursor: pointer;
-  text-decoration-line: underline;
-  text-underline-offset: 2px;
+.heading-base {
+  margin-bottom: 1rem;
+  font-size: .875rem;
+  line-height: 15px;
+  font-weight: 500;
 }
 
-.link-button-base:hover {
-  text-decoration-thickness: 0.125em;
+@media (min-width: 960px) {
+  .heading-base {
+    font-size: 1rem;
+    line-height: 19px;
+    font-weight: 500;
+  }
+}
+
+.heading-small {
+  margin-bottom: 2.5rem;
+  font-size: .875rem;
+  line-height: 15px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+@media (min-width: 960px) {
+  .heading-small {
+    font-size: 1rem;
+    line-height: 19px;
+    font-weight: 500;
+  }
 }
 
 .link-large {
@@ -655,9 +691,103 @@ h1,
   text-decoration-thickness: 0.125em;
 }
 
-.link-color-green {
-  --tw-text-opacity: 1;
-  color: hsl(var(--green-500), var(--tw-text-opacity));
+.divider-red {
+  height: 0.75rem;
+  stroke: hsl(var(--red-500), 1);
+}
+
+@media (min-width: 960px) {
+  .divider-red {
+    height: 1rem;
+  }
+}
+
+.divider-purple {
+  height: 0.75rem;
+  stroke: hsl(var(--purple-500), 1);
+}
+
+@media (min-width: 960px) {
+  .divider-purple {
+    height: 1rem;
+  }
+}
+
+.responsive-header {
+  grid-column: span 4 / span 4;
+  grid-column-start: 1;
+}
+
+@media (min-width: 960px) {
+  .responsive-header {
+    grid-column: span 8 / span 8;
+    grid-column-start: 3;
+    margin-left: -4rem;
+    margin-right: -4rem;
+  }
+}
+
+.hero {
+  grid-column: span 4 / span 4;
+  grid-column-start: 1;
+  margin-left: -2.5rem;
+  margin-right: -2.5rem;
+  margin-bottom: 8rem;
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--purple-200), var(--tw-bg-opacity));
+  padding: 2.5rem;
+}
+
+@media (min-width: 960px) {
+  .hero {
+    grid-column: span 8 / span 8;
+    grid-column-start: 3;
+    margin-left: -4rem;
+    margin-right: -4rem;
+    border-radius: 2rem;
+    border-width: 2px;
+    border-color: hsl(var(--purple-900), .08);
+    padding: 4rem;
+  }
+}
+
+.section-block {
+  grid-column: span 4 / span 4;
+  grid-column-start: 1;
+  margin-bottom: 8rem;
+}
+
+@media (min-width: 960px) {
+  .section-block {
+    grid-column: span 8 / span 8;
+    grid-column-start: 3;
+  }
+}
+
+.section-block-inside {
+  display: flex;
+  flex-direction: column;
+  gap: 3.5rem;
+}
+
+.hero-mini {
+  grid-column: span 4 / span 4;
+  grid-column-start: 1;
+  margin-bottom: 8rem;
+  border-radius: 2rem;
+  border-width: 2px;
+  --tw-bg-opacity: 1;
+  background-color: hsl(var(--purple-200), var(--tw-bg-opacity));
+  padding: 2.5rem;
+}
+
+@media (min-width: 960px) {
+  .hero-mini {
+    grid-column: span 8 / span 8;
+    grid-column-start: 3;
+    border-color: hsl(var(--purple-900), .08);
+    padding: 4rem;
+  }
 }
 
 *, ::before, ::after {
@@ -760,17 +890,8 @@ h1,
   --tw-backdrop-sepia:  ;
 }
 
-.col-span-8 {
-  grid-column: span 8 / span 8;
-}
-
-.col-start-2 {
-  grid-column-start: 2;
-}
-
-.mx-16 {
-  margin-left: 4rem;
-  margin-right: 4rem;
+.col-span-full {
+  grid-column: 1 / -1;
 }
 
 .mx-auto {
@@ -778,20 +899,40 @@ h1,
   margin-right: auto;
 }
 
+.mb-32 {
+  margin-bottom: 8rem;
+}
+
+.mb-4 {
+  margin-bottom: 1rem;
+}
+
 .grid {
   display: grid;
 }
 
-.h-16 {
-  height: 4rem;
+.h-14 {
+  height: 3.5rem;
 }
 
 .w-full {
   width: 100%;
 }
 
-.grid-cols-10 {
-  grid-template-columns: repeat(10, minmax(0, 1fr));
+.list-inside {
+  list-style-position: inside;
+}
+
+.list-disc {
+  list-style-type: disc;
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .gap-x-16 {
@@ -799,26 +940,18 @@ h1,
        column-gap: 4rem;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: hsl(var(--gray-100), var(--tw-bg-opacity));
-}
-
-.bg-purple-200 {
-  --tw-bg-opacity: 1;
-  background-color: hsl(var(--purple-200), var(--tw-bg-opacity));
 }
 
 .fill-gray-900 {
   fill: hsl(var(--gray-900), 1);
 }
 
-.p-16 {
-  padding: 4rem;
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .py-16 {
@@ -826,8 +959,9 @@ h1,
   padding-bottom: 4rem;
 }
 
-.pb-4 {
-  padding-bottom: 1rem;
+.text-orange-500 {
+  --tw-text-opacity: 1;
+  color: hsl(var(--orange-500), var(--tw-text-opacity));
 }
 
 .text-purple-700 {
@@ -835,13 +969,27 @@ h1,
   color: hsl(var(--purple-700), var(--tw-text-opacity));
 }
 
+.text-purple-900 {
+  --tw-text-opacity: 1;
+  color: hsl(var(--purple-900), var(--tw-text-opacity));
+}
+
 @media (min-width: 960px) {
-  .tablet\:rounded-\[2rem\] {
-    border-radius: 2rem;
+  .tablet\:h-16 {
+    height: 4rem;
   }
 
-  .tablet\:border-purple-900\/\[\.08\] {
-    border-color: hsl(var(--purple-900), .08);
+  .tablet\:grid-cols-12 {
+    grid-template-columns: repeat(12, minmax(0, 1fr));
+  }
+
+  .tablet\:gap-x-16 {
+    -moz-column-gap: 4rem;
+         column-gap: 4rem;
+  }
+
+  .tablet\:p-16 {
+    padding: 4rem;
   }
 }
 
