--- a/app/globals.css
+++ b/app/globals.css
@@ -29,10 +29,8 @@
 	}
 	@font-face {
 		font-family: 'heading';
-		src: url('../public/fonts/geomanist-medium-webfont.woff2')
-				format('woff2'),
-			url('../public/fonts/geomanist-medium-webfont.woff') format('woff');
-		font-weight: 500;
+		src: url('../public/fonts/raleway-bold.woff') format('woff');
+		font-weight: 700;
 		font-display: swap;
 		font-style: normal;
 	}
@@ -43,6 +41,7 @@
 		--gray-700: 215deg, 5%, 63%;
 		--gray-800: 225deg, 3%, 76%;
 		--gray-900: 240deg, 2%, 92%;
+		--gray-opa: 240deg, 2%, 92%, 8%;
 
 		--blue-200: 222deg, 24%, 19%;
 		--blue-300: 222deg, 37%, 35%;
@@ -118,12 +117,12 @@
 		--red-800: 344deg, 20%, 37%;
 		--red-900: 345deg, 24%, 30%;
 
-		--ywllow-200: 24deg, 71%, 96%;
-		--ywllow-300: 41deg, 94%, 93%;
-		--ywllow-500: 41deg, 90%, 32%;
-		--ywllow-700: 41deg, 16%, 46%;
-		--ywllow-800: 40deg, 15%, 31%;
-		--ywllow-900: 41deg, 24%, 24%;
+		--yellow-200: 24deg, 71%, 96%;
+		--yellow-300: 41deg, 94%, 93%;
+		--yellow-500: 41deg, 90%, 32%;
+		--yellow-700: 41deg, 16%, 46%;
+		--yellow-800: 40deg, 15%, 31%;
+		--yellow-900: 41deg, 24%, 24%;
 	}
 }
 
@@ -144,6 +143,10 @@
 	h5,
 	h6 {
 		@apply font-heading text-gray-900;
+	}
+
+	.container {
+		@apply grid grid-cols-4 gap-x-16 px-structurePadding tablet:grid-cols-12 tablet:gap-x-16;
 	}
 
 	.p-base {
@@ -180,6 +183,25 @@
 
 	.heading-link {
 		@apply heading-big cursor-pointer hover:underline hover:underline-offset-4 hover:decoration-2;
+	}
+
+	.heading-link-blue {
+		@apply heading-link decoration-blue-500;
+	}
+	.heading-link-green {
+		@apply heading-link decoration-green-500;
+	}
+	.heading-link-purple {
+		@apply heading-link decoration-purple-500;
+	}
+	.heading-link-orange {
+		@apply heading-link decoration-orange-500;
+	}
+	.heading-link-yellow {
+		@apply heading-link decoration-yellow-500;
+	}
+	.heading-link-red {
+		@apply heading-link decoration-red-500;
 	}
 	.link-base {
 		@apply p-base text-gray-900 underline underline-offset-2 cursor-pointer hover:decoration-[0.125em];
@@ -229,19 +251,55 @@
 	.divider-yellow {
 		@apply stroke-yellow-500 h-3 tablet:h-4;
 	}
+	.divider-orange {
+		@apply stroke-orange-500 h-3 tablet:h-4;
+	}
+
 	.responsive-header {
 		@apply col-start-1 col-span-4 tablet:col-start-3 tablet:col-span-8 tablet:-mx-16;
 	}
+
 	.hero {
-		@apply bg-purple-200 tablet:border-purple-900/[.08] tablet:border-2 -mx-10 p-10 col-start-1 col-span-4 tablet:p-16 tablet:rounded-[2rem] tablet:col-start-3 tablet:col-span-8 tablet:-mx-16 mb-32;
+		@apply border-y-2 tablet:border-2 -mx-structureMargin px-structurePadding py-10 col-start-1 col-span-4 tablet:p-16 tablet:rounded-[2rem] tablet:col-start-3 tablet:col-span-8 tablet:-mx-16 mb-32;
+	}
+	.hero-gray {
+		@apply hero bg-gray-200 border-gray-900/[5%];
+	}
+	.hero-green {
+		@apply hero bg-green-200 border-green-900/[5%];
+	}
+	.hero-purple {
+		@apply hero bg-purple-200 border-purple-900/[5%];
+	}
+	.hero-red {
+		@apply hero bg-red-200 border-red-900/[5%];
+	}
+	.hero-yellow {
+		@apply hero bg-yellow-200 border-yellow-900/[5%];
+	}
+
+	.hero-mini {
+		@apply bg-purple-200 border-gray-900/[5%] border-2 p-10 col-start-1 col-span-4 tablet:p-16 rounded-[2rem] tablet:col-start-3 tablet:col-span-8  mb-32;
+	}
+	.hero-mini-gray {
+		@apply hero-mini bg-gray-200 border-gray-900/[5%];
+	}
+	.hero-mini-green {
+		@apply hero-mini bg-green-200 border-green-900/[5%];
+	}
+	.hero-mini-purple {
+		@apply hero-mini bg-purple-200 border-purple-900/[5%];
+	}
+	.hero-mini-red {
+		@apply hero-mini bg-red-200 border-red-900/[5%];
+	}
+	.hero-mini-yellow {
+		@apply hero-mini bg-yellow-200 border-yellow-900/[5%];
 	}
 	.section-block {
 		@apply mb-32 col-start-1 col-span-4 tablet:col-start-3 tablet:col-span-8;
 	}
 	.section-block-inside {
 		@apply flex flex-col gap-14;
-	}
-	.hero-mini {
-		@apply bg-purple-200 tablet:border-purple-900/[.08] border-2 p-10 col-start-1 col-span-4 tablet:p-16 rounded-[2rem] tablet:col-start-3 tablet:col-span-8  mb-32;
 	}
 }
