fix en las preferencias de tehma

--- a/app/globals.css
+++ b/app/globals.css
@@ -83,7 +83,7 @@
 	}
 
 	@media (preferes-color-scheme: light) {
-		:root[data-theme='light'] {
+		:root {
 			--gray-100: 220deg, 60%, 99%;
 			--gray-200: 220deg, 73%, 97%;
 			--gray-600: 221deg, 11%, 51%;
