--- a/public/styles.css
+++ b/public/styles.css
@@ -516,7 +516,7 @@ video {
 }
 
 @media (preferes-color-scheme: light) {
-  :root[data-theme='light'] {
+  :root {
     --gray-100: 220deg, 60%, 99%;
     --gray-200: 220deg, 73%, 97%;
     --gray-600: 221deg, 11%, 51%;
