--- a/app/globals.css
+++ b/app/globals.css
@@ -82,7 +82,7 @@
 		--yellow-900: 38deg, 80%, 98%;
 	}
 
-	@media (preferes-color-scheme: light) {
+	@media (prefers-color-scheme: light) {
 		:root {
 			--gray-100: 220deg, 60%, 99%;
 			--gray-200: 220deg, 73%, 97%;
