--- a/public/styles.css
+++ b/public/styles.css
@@ -473,7 +473,7 @@ video {
   font-style: normal;
 }
 
-:root {
+:root[data-theme='dark'] {
   --gray-100: 222deg, 25%, 10%;
   --gray-200: 222deg, 25%, 13%;
   --gray-600: 222deg, 8%, 61%;
@@ -483,7 +483,7 @@ video {
   --blue-200: 222deg, 24%, 19%;
   --blue-300: 222deg, 37%, 35%;
   --blue-500: 215deg, 100%, 61%;
-  --blue-700: 216deg, 24%, 70%;
+  --blue-700: 216deg, 50%, 70%;
   --blue-800: 215deg, 67%, 94%;
   --blue-900: 215deg, 90%, 98%;
   --orange-200: 23deg, 15%, 17%;
@@ -515,48 +515,49 @@ video {
   --yellow-900: 38deg, 80%, 98%;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    --gray-100: 220deg, 60%, 99%;
-    --gray-200: 220deg, 73%, 97%;
-    --gray-600: 221deg, 11%, 51%;
-    --gray-700: 223deg, 14%, 39%;
-    --gray-800: 222deg, 19%, 31%;
-    --gray-900: 221deg, 24%, 24%;
-    --blue-200: 212deg, 90%, 96%;
-    --blue-300: 213deg, 100%, 93%;
-    --blue-500: 215deg, 94%, 50%;
-    --blue-700: 215deg, 29%, 44%;
-    --blue-800: 215deg, 35%, 31%;
-    --blue-900: 215deg, 54%, 24%;
-    --orange-200: 25deg, 90%, 96%;
-    --orange-300: 25deg, 95%, 92%;
-    --orange-500: 25deg, 79%, 43%;
-    --green-200: 138deg, 62%, 96%;
-    --green-300: 147deg, 69%, 90%;
-    --green-500: 148deg, 38%, 37%;
-    --green-700: 148deg, 19%, 44%;
-    --green-800: 148deg, 15%, 31%;
-    --green-900: 149deg, 24%, 24%;
-    --purple-200: 250deg, 67%, 96%;
-    --purple-300: 250deg, 94%, 94%;
-    --purple-500: 250deg, 75%, 64%;
-    --purple-700: 250deg, 18%, 55%;
-    --purple-800: 251deg, 20%, 40%;
-    --purple-900: 251deg, 24%, 33%;
-    --red-200: 348deg, 56%, 96%;
-    --red-300: 346deg, 94%, 94%;
-    --red-500: 345deg, 60%, 53%;
-    --red-700: 345deg, 16%, 52%;
-    --red-800: 344deg, 20%, 37%;
-    --red-900: 345deg, 24%, 30%;
-    --yellow-200: 24deg, 71%, 96%;
-    --yellow-300: 41deg, 94%, 93%;
-    --yellow-500: 41deg, 90%, 32%;
-    --yellow-700: 41deg, 16%, 46%;
-    --yellow-800: 40deg, 15%, 31%;
-    --yellow-900: 41deg, 24%, 24%;
-  }
+:root[data-theme='light'] {
+  --gray-100: 220deg, 60%, 99%;
+  --gray-200: 220deg, 73%, 97%;
+  --gray-600: 221deg, 11%, 51%;
+  --gray-700: 223deg, 14%, 39%;
+  --gray-800: 222deg, 19%, 31%;
+  --gray-900: 221deg, 24%, 24%;
+  --blue-200: 212deg, 90%, 96%;
+  --blue-300: 213deg, 100%, 93%;
+  --blue-500: 215deg, 94%, 50%;
+  --blue-700: 215deg, 29%, 44%;
+  --blue-800: 215deg, 35%, 31%;
+  --blue-900: 215deg, 54%, 24%;
+  --orange-200: 25deg, 90%, 96%;
+  --orange-300: 25deg, 95%, 92%;
+  --orange-500: 25deg, 79%, 43%;
+  --green-200: 138deg, 62%, 96%;
+  --green-300: 147deg, 69%, 90%;
+  --green-500: 148deg, 38%, 37%;
+  --green-700: 148deg, 19%, 44%;
+  --green-800: 148deg, 15%, 31%;
+  --green-900: 149deg, 24%, 24%;
+  --purple-200: 250deg, 67%, 96%;
+  --purple-300: 250deg, 94%, 94%;
+  --purple-500: 250deg, 75%, 64%;
+  --purple-700: 250deg, 18%, 55%;
+  --purple-800: 251deg, 20%, 40%;
+  --purple-900: 251deg, 24%, 33%;
+  --red-200: 348deg, 56%, 96%;
+  --red-300: 346deg, 94%, 94%;
+  --red-500: 345deg, 60%, 53%;
+  --red-700: 345deg, 16%, 52%;
+  --red-800: 344deg, 20%, 37%;
+  --red-900: 345deg, 24%, 30%;
+  --yellow-200: 24deg, 71%, 96%;
+  --yellow-300: 41deg, 94%, 93%;
+  --yellow-500: 41deg, 90%, 32%;
+  --yellow-700: 41deg, 16%, 46%;
+  --yellow-800: 40deg, 15%, 31%;
+  --yellow-900: 41deg, 24%, 24%;
+}
+
+@media (prefers-color-scheme: lime) {
 }
 
 p,
@@ -1074,14 +1075,14 @@ h1,
   font-style: italic;
 }
 
+.text-blue-700 {
+  --tw-text-opacity: 1;
+  color: hsl(var(--blue-700), var(--tw-text-opacity));
+}
+
 .text-gray-600 {
   --tw-text-opacity: 1;
   color: hsl(var(--gray-600), var(--tw-text-opacity));
-}
-
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: hsl(var(--gray-700), var(--tw-text-opacity));
 }
 
 .text-green-700 {
@@ -1184,6 +1185,10 @@ h1,
 
   .group:hover .tablet\:group-hover\:decoration-red-500 {
     text-decoration-color: hsl(var(--red-500), 1);
+  }
+
+  .group:hover .tablet\:group-hover\:decoration-wavy {
+    text-decoration-style: wavy;
   }
 
   .group:hover .tablet\:group-hover\:decoration-2 {
