--- a/app/globals.css
+++ b/app/globals.css
@@ -5,24 +5,21 @@
 @layer base {
 	@font-face {
 		font-family: 'ui';
-		src: url('../public/fonts/wotfard-semibold-webfont.woff2')
-			format('woff2');
-		font-weight: 600;
+		src: url('../public/fonts/plus-jakarta-bold.woff2') format('woff2');
+		font-weight: 700;
 		font-display: swap;
 		font-style: normal;
 	}
 	@font-face {
 		font-family: 'ui';
-		src: url('../public/fonts/wotfard-regularitalic-webfont.woff2')
-			format('woff2');
+		src: url('../public/fonts/plus-jakarta-italic.woff2') format('woff2');
 		font-weight: 400;
 		font-display: swap;
 		font-style: italic;
 	}
 	@font-face {
 		font-family: 'ui';
-		src: url('../public/fonts/wotfard-regular-webfont.woff2')
-			format('woff2');
+		src: url('../public/fonts/plus-jakarta-regular.woff2') format('woff2');
 		font-weight: 400;
 		font-display: swap;
 		font-style: normal;
@@ -35,17 +32,19 @@
 		font-style: normal;
 	}
 	:root[data-theme='dark'] {
+		--white: 0deg, 0%, 100%;
+
 		--gray-100: 222deg, 25%, 10%;
 		--gray-200: 222deg, 25%, 13%;
 		--gray-600: 222deg, 8%, 61%;
-		--gray-700: 222deg, 5%, 64%;
-		--gray-800: 222deg, 3%, 77%;
+		--gray-700: 222deg, 10%, 70%;
+		--gray-800: 222deg, 10%, 79%;
 		--gray-900: 222deg, 2%, 92%;
 
 		--blue-200: 222deg, 24%, 19%;
-		--blue-300: 222deg, 37%, 35%;
-		--blue-500: 215deg, 100%, 61%;
-		--blue-700: 216deg, 50%, 70%;
+		--blue-300: 222deg, 40%, 20%;
+		--blue-500: 215deg, 95%, 57%;
+		--blue-700: 216deg, 25%, 70%;
 		--blue-800: 215deg, 67%, 94%;
 		--blue-900: 215deg, 90%, 98%;
 
@@ -54,15 +53,15 @@
 		--orange-500: 24deg, 93%, 65%;
 
 		--green-200: 148deg, 15%, 17%;
-		--green-300: 148deg, 37%, 25%;
+		--green-300: 148deg, 37%, 15%;
 		--green-500: 148deg, 81%, 50%;
 		--green-700: 149deg, 12%, 56%;
 		--green-800: 148deg, 31%, 80%;
 		--green-900: 150deg, 80%, 98%;
 
 		--purple-200: 254deg, 14%, 18%;
-		--purple-300: 249deg, 37%, 34%;
-		--purple-500: 251deg, 99%, 73%;
+		--purple-300: 254deg, 38%, 23%;
+		--purple-500: 251deg, 99%, 78%;
 		--purple-700: 251deg, 11%, 60%;
 		--purple-800: 250deg, 29%, 84%;
 		--purple-900: 248deg, 80%, 98%;
@@ -83,6 +82,8 @@
 	}
 
 	:root[data-theme='light'] {
+		--white: 0deg, 0%, 100%;
+
 		--gray-100: 220deg, 60%, 99%;
 		--gray-200: 220deg, 73%, 97%;
 		--gray-600: 221deg, 11%, 51%;
@@ -91,9 +92,9 @@
 		--gray-900: 221deg, 24%, 24%;
 
 		--blue-200: 212deg, 90%, 96%;
-		--blue-300: 213deg, 100%, 93%;
+		--blue-300: 213deg, 100%, 94%;
 		--blue-500: 215deg, 94%, 50%;
-		--blue-700: 215deg, 29%, 44%;
+		--blue-700: 215deg, 33%, 44%;
 		--blue-800: 215deg, 35%, 31%;
 		--blue-900: 215deg, 54%, 24%;
 
@@ -102,15 +103,15 @@
 		--orange-500: 25deg, 79%, 43%;
 
 		--green-200: 138deg, 62%, 96%;
-		--green-300: 147deg, 69%, 90%;
-		--green-500: 148deg, 38%, 37%;
+		--green-300: 147deg, 50%, 93%;
+		--green-500: 148deg, 68%, 37%;
 		--green-700: 148deg, 19%, 44%;
 		--green-800: 148deg, 15%, 31%;
 		--green-900: 149deg, 24%, 24%;
 
 		--purple-200: 250deg, 67%, 96%;
-		--purple-300: 250deg, 94%, 94%;
-		--purple-500: 250deg, 75%, 64%;
+		--purple-300: 250deg, 94%, 96%;
+		--purple-500: 250deg, 95%, 64%;
 		--purple-700: 250deg, 18%, 55%;
 		--purple-800: 251deg, 20%, 40%;
 		--purple-900: 251deg, 24%, 33%;
@@ -154,7 +155,22 @@
 	}
 
 	.container {
-		@apply grid grid-cols-4 gap-x-16 px-structurePadding tablet:grid-cols-12 tablet:gap-x-16;
+		@apply mx-auto grid grid-cols-4 gap-x-16 px-structurePadding desktop:px-0 tablet:grid-cols-8 tablet:gap-x-16 desktop:grid-cols-12 desktop:gap-x-16;
+	}
+	.responsive-sections {
+		@apply col-start-1 col-span-4 tablet:col-start-2 tablet:col-span-6 desktop:col-start-3 desktop:col-span-8;
+	}
+	.section-block {
+		@apply mb-32 responsive-sections;
+	}
+	.section-block-inside {
+		@apply flex flex-col gap-14;
+	}
+	.header-responsive {
+		@apply responsive-sections;
+	}
+	.hero {
+		@apply tablet:border-2 tablet:p-16 tablet:rounded-[2rem] -mx-structureMargin px-structurePadding py-10 col-start-1 col-span-4 tablet:col-start-2 tablet:col-span-6 desktop:col-start-3 desktop:col-span-8 tablet:-mx-16 mb-32;
 	}
 
 	.p-base {
@@ -186,7 +202,7 @@
 		@apply mb-4 text-headingMobileBase tablet:text-headingWebBase;
 	}
 	.heading-small {
-		@apply mb-10 text-headingMobileBase tablet:text-headingWebBase uppercase;
+		@apply mb-10 text-headingMobileSmall tablet:text-headingWebSmall uppercase;
 	}
 
 	.heading-link {
@@ -218,7 +234,10 @@
 		@apply p-large text-gray-800 underline underline-offset-2 cursor-pointer;
 	}
 	.link-button-base {
-		@apply b-base underline underline-offset-2 hover:decoration-[0.125em] cursor-pointer;
+		@apply b-base underline underline-offset-2 cursor-pointer;
+	}
+	.button-base {
+		@apply b-base cursor-pointer px-6 py-3 bg-blue-500 rounded-full text-white-white;
 	}
 
 	.link-color-blue {
@@ -263,13 +282,6 @@
 		@apply stroke-orange-500 h-3 tablet:h-4;
 	}
 
-	.responsive-header {
-		@apply col-start-1 col-span-4 tablet:col-start-3 tablet:col-span-8 tablet:-mx-16;
-	}
-
-	.hero {
-		@apply tablet:border-2 -mx-structureMargin px-structurePadding py-10 col-start-1 col-span-4 tablet:p-16 tablet:rounded-[2rem] tablet:col-start-3 tablet:col-span-8 tablet:-mx-16 mb-32;
-	}
 	.hero-gray {
 		@apply hero bg-gray-200 border-gray-900/[5%];
 	}
@@ -284,6 +296,9 @@
 	}
 	.hero-yellow {
 		@apply hero bg-yellow-200 border-yellow-900/[5%];
+	}
+	.hero-blue {
+		@apply hero bg-blue-200 border-blue-900/[5%];
 	}
 
 	.hero-mini {
@@ -304,10 +319,8 @@
 	.hero-mini-yellow {
 		@apply hero-mini bg-yellow-200 border-yellow-900/[5%];
 	}
-	.section-block {
-		@apply mb-32 col-start-1 col-span-4 tablet:col-start-3 tablet:col-span-8;
-	}
-	.section-block-inside {
-		@apply flex flex-col gap-14;
+
+	.card-new {
+		/* @apply transition ease-in-out duration-500 mb-24 tablet:mb-6 group flex flex-col-reverse gap-10 tablet:gap-12 tablet:grid tablet:grid-cols-2 tablet:items-center tablet:p-16 tablet:-mx-16 rounded-[2rem] tablet:border-2 tablet:border-gray-100 tablet:hover:bg-gray-200 tablet:hover:border-gray-900/[5%] cursor-pointer; */
 	}
 }
